--- a/FAUislandoraCss/FAUtest_islandoratheme_customcsssetting.css
+++ b/FAUislandoraCss/FAUtest_islandoratheme_customcsssetting.css
@@ -141,11 +141,12 @@ section#block-block-4 {
     margin-top: 1%;
 margin-left: 4.5%;
 padding: 5px;
-    width: 470px;
+    max-width: 470px;
+    width: 45%;
     background-color: WhiteSmoke;
     border-radius: 5px;
     box-shadow: 5px 5px 5px #888888;
-    height: 350px;
+    min-height: 350px;
 color: #003366;
     clear:none;
 font-family: palantino, serif;
@@ -166,11 +167,12 @@ section#block-block-5 {
        float: left;
     margin: 1%;
 padding: 5px;
-    width: 470px;
+    max-width: 470;
+    width: 45%;
     background-color: WhiteSmoke;
     border-radius: 5px;
     box-shadow: 5px 5px 5px #888888;
-   height: 350px;
+   min-height: 350px;
 clear: none;
 font-family: palantino, serif;
 color: #003366;
@@ -197,6 +199,11 @@ color: #003366;
 text-shadow:2px 2px #e8e8e8;
 font-weight: bold;
 margin-left: 25%;
+}
+
+#digitalbox a {
+text-decoration: none;
+color:  #003366;
 }
 
 #irbox {
