Inching toward responsive homepage for FAU.

--- a/FAUislandoraCss/FAUtest_islandoratheme_customcsssetting.css
+++ b/FAUislandoraCss/FAUtest_islandoratheme_customcsssetting.css
@@ -167,7 +167,7 @@ section#block-block-5 {
        float: left;
     margin: 1%;
 padding: 5px;
-    max-width: 470;
+    max-width: 470px;
     width: 45%;
     background-color: WhiteSmoke;
     border-radius: 5px;
