--- a/FAUislandoraCss/FAUtest_islandoratheme_customcsssetting.css
+++ b/FAUislandoraCss/FAUtest_islandoratheme_customcsssetting.css
@@ -137,10 +137,11 @@ div.region-highlighted .block:last-child { margin-bottom: 0; }
 /*digital library and ir splash page block configuration*/
 /*left box*/
 section#block-block-4 {
-       float: left;
+    float: left;
     padding: 1%;
-    margin: 1%;
     max-width: 470px;
+    min-width: 270px;
+    margin: 1%;
     width: 45%;
     background-color: WhiteSmoke;
     border-radius: 5px;
@@ -163,10 +164,11 @@ color: #003366;
 
 /*right box*/
 section#block-block-5 {
-       float: left;
+    float: left;
     padding: 1%;
     margin: 1%;
     max-width: 470px;
+    min-width: 270px;
     width: 45%;
     background-color: WhiteSmoke;
     border-radius: 5px;
