FAU IR Splash page inching toward responsive design on prod.

--- a/FAUislandoraCss/FAUprod_islandoratheme_customcsssetting.css
+++ b/FAUislandoraCss/FAUprod_islandoratheme_customcsssetting.css
@@ -227,6 +227,7 @@ color:  #003366;
 background-color: #ffffff;
     float: left;
    width: 25%;
+   min-width: 230px;
     padding: 3px;
    border: grey 1px;
     border-style: solid;
@@ -255,7 +256,7 @@ background-color: #cccccc;
 text-decoration: none;
 color: #ffffff;
 font-family: palantino, serif;
-height: 55px;
+min-height: 55px;
 line-height: 55px;
   }
 
@@ -300,14 +301,15 @@ background: white;
 
 /*IR slideshow*/
 #block-views-ir-page-slideshow-block {
- float:right;
+ float:left;
  width: 70%;
+ min-width: 230px;
 clear: none;
   padding: 3px;
    border: grey 1px;
     border-style: solid;
  margin-top: 1%;
-height:453px;
+max-height:453px;
 }
 
 
