--- a/FGCUislandoraCss/FGCUtest_islandoratheme_customcsssetting.css
+++ b/FGCUislandoraCss/FGCUtest_islandoratheme_customcsssetting.css
@@ -169,7 +169,7 @@ padding: 5px;
 #block-block-6 {
 background-color: #ffffff;
     float: left;
-   width: 23.5%;
+   width: 25%;
     padding: 3px;
    border: grey 1px;
     border-style: solid;
@@ -177,7 +177,7 @@ background-color: #ffffff;
    font-size: 1.5em;
    clear: none;
    margin: 1%;
-height: 453px;
+height: 450px;
 
 
 }
@@ -186,8 +186,7 @@ height: 453px;
 list-style-type: none;
 background-color: #B8CA99;
 margin: 1%;
-width: auto;
-height: 447px;
+height: 98%;
 
 }
 
@@ -196,15 +195,22 @@ height: 447px;
 list-style-type: none;
 text-align: left;
   border-bottom: 1px solid #ffffff;
-padding-top: 10%;
-padding-bottom: 7%;
 padding-left: 5px;
 background-color: #B8CA99;
-width: auto;
 text-decoration: none;
 color: #ffffff;
-height: auto;
+height: 73px;
+line-height: 73px;
   }
+
+
+#block-block-6 ul li a {
+display: inline-block;
+width: 100%;
+height: 100%;
+text-decoration:none;
+color: #ffffff;
+}
 
 
 #block-block-6 li:hover {
@@ -234,13 +240,14 @@ background: white;
 
 
 #block-views-ir-slideshow-block {
- float: left;
+ float: right;
  width: 70%;
 clear: none;
   padding: 3px;
    border: grey 1px;
     border-style: solid;
  margin-top: 1%;
+ height: 30%;
 }
 
 
