--- a/FGCUislandoraCss/FGCUprod_islandoratheme_customcsssetting.css
+++ b/FGCUislandoraCss/FGCUprod_islandoratheme_customcsssetting.css
@@ -132,7 +132,7 @@ div.islandora-audio-content {width:480px;}
 
 /*digital library and ir splash page block configuration*/
 section#block-block-4 {
-       float: left;
+    float: left;
     max-width: 495px;
     margin: 1%;
     background-color: WhiteSmoke;
@@ -166,10 +166,13 @@ padding: 5px;
 }
 
 
+
+/*left IR menu*/
 #block-block-6 {
 background-color: #ffffff;
     float: left;
    width: 25%;
+   min-width: 230px;
     padding: 3px;
    border: grey 1px;
     border-style: solid;
@@ -179,6 +182,7 @@ background-color: #ffffff;
    margin: 1%;
 height: 450px;
 
+
 }
 
 #block-block-6 ul {
@@ -186,6 +190,7 @@ list-style-type: none;
 background-color: #B8CA99;
 margin: 1%;
 height: 98%;
+
 }
 
 
@@ -197,9 +202,10 @@ padding-left: 5px;
 background-color: #B8CA99;
 text-decoration: none;
 color: #ffffff;
-height: 73px;
+min-height: 73px;
 line-height: 73px;
   }
+
 
 #block-block-6 ul li a {
 display: inline-block;
@@ -208,6 +214,7 @@ height: 100%;
 text-decoration:none;
 color: #ffffff;
 }
+
 
 #block-block-6 li:hover {
 background: white;
@@ -224,30 +231,26 @@ color: #ffffff;
 #block-block-6 li a:active{
 color: #ffffff;
 text-decoration: none;
-
 }
 
 #block-block-6 li a:hover {
 color: black;
 text-decoration: none;
 background: white;
-
 }
-
-
 
 #block-block-6 li:last-child { border-bottom: none; } 
 
 
 #block-views-ir-slideshow-block {
- float:right;
+ float: right;
  width: 70%;
 clear: none;
   padding: 3px;
    border: grey 1px;
     border-style: solid;
  margin-top: 1%;
-height:30%;
+ height: 30%;
 }
 
 
@@ -279,4 +282,7 @@ background: #00287A;
 color: white;
 } 
 
-
+#islandora-metadata-fields li:last-child dt {
+visibility: hidden;
+}
+ 
