Small changes related to responsiveness.  (Not sure these changes matter much.)  I think this is the limit to what I can do with css.

--- a/FGCUislandoraCss/FGCUprod_islandoratheme_customcsssetting.css
+++ b/FGCUislandoraCss/FGCUprod_islandoratheme_customcsssetting.css
@@ -242,6 +242,7 @@ background: white;
 #block-block-6 li:last-child { border-bottom: none; } 
 
 
+/*IR slideshow*/
 #block-views-ir-slideshow-block {
  float: right;
  width: 70%;
