For FAU, on the faculty grid view, hide Status column and Publications column.

--- a/FAUislandoraCss/FAUtest_islandoratheme_customcsssetting.css
+++ b/FAUislandoraCss/FAUtest_islandoratheme_customcsssetting.css
@@ -383,3 +383,16 @@ width: 100%;
 color: #003366;
 font-family: palantino, serif;
 }
+
+
+/* Hide "Status" and "Publications" columns off of faculty grid view */
+
+.views-field-MADS-status-ms
+{
+	visibility:hidden;
+}
+
+.views-field-MADS-u1-ms
+{
+	visibility:hidden;
+}
