--- a/FAUislandoraCss/FAUtest_islandoratheme_customcsssetting.css
+++ b/FAUislandoraCss/FAUtest_islandoratheme_customcsssetting.css
@@ -223,7 +223,7 @@ color:  #003366;
 
 /*left IR menu*/
 #block-block-14 {
-background-color: #ffffff;
+background-color: #003366;
     float: left;
    width: 25%;
    min-width: 230px;
@@ -240,7 +240,7 @@ height: 453px;
 
 #block-block-14 ul {
 list-style-type: none;
-background-color: #cccccc;
+background-color: #003366;
 margin: 1%;
 height: 99%;
 }
@@ -249,11 +249,11 @@ height: 99%;
 #block-block-14 li {
 list-style-type: none;
 text-align: left;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid #D2EDF3;
 padding-left: 5px;
-background-color: #cccccc;
+background-color: #003366;
 text-decoration: none;
-color: #ffffff;
+color: #D2EDF3;
 font-family: palantino, serif;
 min-height: 55px;
 line-height: 55px;
@@ -264,7 +264,7 @@ display: inline-block;
 width: 100%;
 height: 100%;
 text-decoration:none;
-color: #ffffff;
+color: #D2EDF3;
 }
 
 #block-block-14 li:hover {
@@ -383,7 +383,6 @@ width: 100%;
 color: #003366;
 font-family: palantino, serif;
 }
-
 
 /* Hide "Status" and "Publications" columns off of faculty grid view */
 
