--- a/FAUislandoraCss/FAUtest_islandoratheme_customcsssetting.css
+++ b/FAUislandoraCss/FAUtest_islandoratheme_customcsssetting.css
@@ -249,7 +249,7 @@ height: 99%;
 #block-block-14 li {
 list-style-type: none;
 text-align: left;
-  border-bottom: 1px solid #D2EDF3;
+  border-bottom: 1px solid #003366;
 padding-left: 5px;
 background-color: #003366;
 text-decoration: none;
