--- a/BrowardCollegeIslandoraCss/Broward_testandprod_islandoratheme_customcsssetting.css
+++ b/BrowardCollegeIslandoraCss/Broward_testandprod_islandoratheme_customcsssetting.css
@@ -19,7 +19,10 @@ background-color: #D9D4C4;
 .islandora-compound-title {color:#002e52;}
 .islandora-compound-title a:link {color:#002e52;}
 .islandora-compound-title a:visited {color:#002e52;}
+
+.block-inner.block-content.islandora-compound-prev-next {color:#002e52;}
 .islandora-compound-prev-next {color:#002e52;}
+.islandora-compound-prev-next blockquote {color:#002e52;}
 .islandora-compound-prev-next a:link {color:#002e52;}
 .islandora-compound-prev-next a:visited {color:#002e52;}
 /*END Site-Specific tweaks*/
@@ -59,6 +62,15 @@ section#block-islandora-solr-simple h2 {color: white; }
 /* Basic Search Styles */
 #islandora-basic-view-all-option { border-bottom: 4px solid #ffffff; }/*???*/
 /*-------------END "SEARCH IN" Bar---------------*/
+
+/* Trying to get search in not to overlap menu on a narrow screen */
+
+.at-panel { clear: both; }
+.region-inner {background: black;
+padding-bottom: 1px;}
+#block-islandora-solr-simple { float: right;}
+#menu-bar {margin-top: 1px;}
+section#block-islandora-solr-simple {margin-bottom: -10px;}
 
 /* ------------Menu Bar Styles------------ */
 #menu-bar {background: #002e52;
