--- a/CollectionsDemoSiteCss/Collections_test_islandoratheme_customcsssetting.css
+++ b/CollectionsDemoSiteCss/Collections_test_islandoratheme_customcsssetting.css
@@ -26,6 +26,13 @@ div#edit-simple label{color:#005c7d;} /*'for' color*/
 /* Basic Search Styles */
 #islandora-basic-view-all-option { border-bottom: 4px solid #ffffff; }/*???*/
 
+/* Trying to get search in not to overlap menu on a narrow screen */
+
+.at-panel { clear: both; }
+.region-inner {background: #d5e8f3;}
+#block-islandora-solr-simple { float: right;}
+section#block-islandora-solr-simple {margin-bottom: -10px;}
+
 /* ------------Menu Bar Styles------------ */
 #menu-bar {background: #00719a;
 }
