--- a/CollectionsDemoSiteCss/Collections_test_islandoratheme_customcsssetting.css
+++ b/CollectionsDemoSiteCss/Collections_test_islandoratheme_customcsssetting.css
@@ -30,7 +30,7 @@ div#edit-simple label{color:#005c7d;} /*'for' color*/
 
 .at-panel { clear: both; }
 .region-inner {background: #d5e8f3;}
-#block-islandora-solr-simple { float: right;}
+#block-islandora-solr-simple { float: left;}
 section#block-islandora-solr-simple {margin-bottom: -10px;}
 
 /* ------------Menu Bar Styles------------ */
