--- a/FAMUislandoraCss/FAMUtestandprod_islandoratheme_customcsssetting.css
+++ b/FAMUislandoraCss/FAMUtestandprod_islandoratheme_customcsssetting.css
@@ -24,6 +24,13 @@ div#edit-simple label{color:black;} /*'for' color*/
 #islandora-basic-view-all-option { border-bottom: 4px solid #ffffff; }/*???*/
 /*-------------END "SEARCH IN" Bar---------------*/
 
+/* Trying to get search in not to overlap menu on a narrow screen */
+
+.at-panel { clear: both; }
+.region-inner {background: #F77F00;}
+#block-islandora-solr-simple { float: right;}
+section#block-islandora-solr-simple {margin-bottom: -10px;}
+
 /* ------------Menu Bar Styles------------ */
 #menu-bar {background: #008751;} //#a7d790; /* Old browsers */
 //background: -moz-linear-gradient(top,  #a7d790 0%, #c9e7bc 97%, #000000 100%); /* FF3.6+ */
