--- a/BrowardCollegeIslandoraCss/Broward_testandprod_islandoratheme_customcsssetting.css
+++ b/BrowardCollegeIslandoraCss/Broward_testandprod_islandoratheme_customcsssetting.css
@@ -66,7 +66,7 @@ section#block-islandora-solr-simple h2 {color: white; }
 /* Trying to get search in not to overlap menu on a narrow screen */
 
 .at-panel { clear: both; }
-.region-inner {background: black;}
+.region-three-33-top .region-inner {background: black;}
 #block-islandora-solr-simple { float: left;}
 section#block-islandora-solr-simple {margin-bottom: -10px;}
 
