Get FAMU's search in menu repsonsive.

--- a/FAMUislandoraCss/FAMUtestandprod_islandoratheme_customcsssetting.css
+++ b/FAMUislandoraCss/FAMUtestandprod_islandoratheme_customcsssetting.css
@@ -27,8 +27,8 @@ div#edit-simple label{color:black;} /*'for' color*/
 /* Trying to get search in not to overlap menu on a narrow screen */
 
 .at-panel { clear: both; }
-.region-inner {background: #F77F00;}
-#block-islandora-solr-simple { float: right;}
+.region-three-33-top .region-inner {background: #F77F00;}
+#block-islandora-solr-simple { float: left;}
 section#block-islandora-solr-simple {margin-bottom: -10px;}
 
 /* ------------Menu Bar Styles------------ */
