--- a/FIUislandoraCss/FIUtestandprod_islandoratheme_customcsssetting.css
+++ b/FIUislandoraCss/FIUtestandprod_islandoratheme_customcsssetting.css
@@ -35,6 +35,13 @@ div#edit-simple label{color:#000000;} /*'for' color*/
 /* Basic Search Styles */
 #islandora-basic-view-all-option { border-bottom: 4px solid #000000; }/*View All ?*/
 
+/* Trying to get search in not to overlap menu on a narrow screen */
+
+.at-panel {clear: both;}
+.region-three-33-top .region-inner {background: #ffffff;}
+#block-islandora-solr-simple { float: left;}
+section#block-islandora-solr-simple {margin-bottom: -10px;}
+
 
 /* ------------MENU BAR STYLES------------ */
 #menu-bar { background-color: black; }
