Get fsu-test search in menu responsice.

--- a/FSUislandoraCss/FSUtest_islandoratheme_customcsssetting.css
+++ b/FSUislandoraCss/FSUtest_islandoratheme_customcsssetting.css
@@ -29,6 +29,13 @@ div.region-highlighted .block:last-child { margin-bottom: 0; }
 /* Basic Search Styles */
 #islandora-basic-view-all-option { border-bottom: 4px solid #5e0117; }
 
+/* Trying to get search in not to overlap menu on a narrow screen */
+
+.at-panel {clear: both;}
+.region-three-33-top .region-inner {background: #cec194;}
+#block-islandora-solr-simple { float: left;}
+section#block-islandora-solr-simple {margin-bottom: -10px;}
+
 /* Menu Bar Styles */
 #menu-bar { background-color: black; }
 .nav .block-menu ul li a.active { background-color: white; }
