--- a/NWFSCislandoraCss/NWFSCtest_islandoratheme_customcsssetting.css
+++ b/NWFSCislandoraCss/NWFSCtest_islandoratheme_customcsssetting.css
@@ -31,6 +31,13 @@ div#edit-simple label{color:black;} /*'for' color*/
 #islandora-basic-view-all-option { border-bottom: 4px solid #ffffff; }/*???*/
 /*-------------END "SEARCH IN" Bar---------------*/
 
+/* Trying to get search in not to overlap menu on a narrow screen */
+
+.at-panel {clear: both;}
+.region-three-33-top .region-inner {background: #e3e3e3;}
+#block-islandora-solr-simple { float: left;}
+section#block-islandora-solr-simple {margin-bottom: -10px;}
+
 /* ------------Menu Bar Styles------------ */
 #menu-bar {background: #000000
 }
