--- a/SCFislandoraCss/SCFtestandprod_islandoratheme_customcsssetting.css
+++ b/SCFislandoraCss/SCFtestandprod_islandoratheme_customcsssetting.css
@@ -33,6 +33,12 @@ div#edit-simple label{color:white;} /*'for' color*/
 /* Basic Search Styles */
 #islandora-basic-view-all-option { border-bottom: 4px solid #ffffff; }/*???*/
 
+/* Trying to get search in not to overlap menu on a narrow screen */
+
+.at-panel {clear: both;}
+.region-three-33-top .region-inner {background: #000000;}
+#block-islandora-solr-simple { float: left;}
+section#block-islandora-solr-simple {margin-bottom: -10px;}
 
 /* ------------Menu Bar Styles------------ */
 #menu-bar {background: #00355f;
