--- a/SPCislandoraCss/SPCtestandprod_islandoratheme_customcsssetting.css
+++ b/SPCislandoraCss/SPCtestandprod_islandoratheme_customcsssetting.css
@@ -44,6 +44,13 @@ div#edit-simple label{color:#ffffff;} /*'for' color*/
 /* Basic Search Styles */
 #islandora-basic-view-all-option { border-bottom: 4px solid #ffffff; }/*???*/
 
+/* Trying to get search in not to overlap menu on a narrow screen */
+
+.at-panel {clear: both;}
+.region-three-33-top .region-inner {background: #000000;}
+#block-islandora-solr-simple { float: left;}
+section#block-islandora-solr-simple {margin-bottom: -10px;}
+
 /* ------------Menu Bar Styles------------ */
 #menu-bar {background: #303f60; /* Old browsers */
 background: -moz-linear-gradient(top,  #303f60 0%, #3c5075 41%, #39557d 77%, #3c5482 100%); /* FF3.6+ */
