--- a/UCFislandoraCss/UCFtest_islandoratheme_customcsssetting.css
+++ b/UCFislandoraCss/UCFtest_islandoratheme_customcsssetting.css
@@ -43,6 +43,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#444444', end
 /* Basic Search Styles */
 #islandora-basic-view-all-option { border-bottom: 4px solid #ecdeb4; }
 
+/* Trying to get search in not to overlap menu on a narrow screen */
+
+.at-panel {clear: both;}
+.region-three-33-top .region-inner {background: #eeeeee;}
+#block-islandora-solr-simple { float: left;}
+section#block-islandora-solr-simple {margin-bottom: -10px;}
+
 /* Menu Bar Styles */
 #menu-bar { background-color: #333; }
 .nav .block-menu ul li a.active { background-color: white; }
