--- a/UFislandoraCss/UFtestandprod_islandoratheme_customcsssetting.css
+++ b/UFislandoraCss/UFtestandprod_islandoratheme_customcsssetting.css
@@ -53,6 +53,12 @@ div#edit-simple label{color:#003896;} /*'for' color*/
 /* Basic Search Styles */
 #islandora-basic-view-all-option { border-bottom: 4px solid #ffffff; }/*???*/
 
+/* Trying to get search in not to overlap menu on a narrow screen */
+
+.at-panel {clear: both;}
+.region-three-33-top .region-inner {background: #ffffff;}
+#block-islandora-solr-simple { float: left;}
+section#block-islandora-solr-simple {margin-bottom: -10px;}
 
 /* ------------MENU BAR STYLES------------ */
 #menu-bar {background: #003896;
