--- a/UNFislandoraCss/UNFtestandprod_islandoratheme_customcsssetting.css
+++ b/UNFislandoraCss/UNFtestandprod_islandoratheme_customcsssetting.css
@@ -37,6 +37,13 @@ div#edit-simple label{color:#000000;} /*'for' color*/
 /* Basic Search Styles */
 #islandora-basic-view-all-option { border-bottom: 4px solid #000000; }/*View All ?*/
 
+/* Trying to get search in not to overlap menu on a narrow screen */
+
+.at-panel {clear: both;}
+.region-three-33-top .region-inner {background: #ffffff;}
+#block-islandora-solr-simple { float: left;}
+section#block-islandora-solr-simple {margin-bottom: -10px;}
+
 
 /* ------------MENU BAR STYLES------------ */
 #menu-bar {background: linear-gradient(to bottom, #707577 17%, #8a8d94 82%) repeat scroll 0 0 rgba(0, 0, 0, 0);
