--- a/Valencia_testandprod_islandoratheme_customcsssetting.css
+++ b/Valencia_testandprod_islandoratheme_customcsssetting.css
@@ -1,3 +1,9 @@
+/* Trying to get search in not to overlap menu on a narrow screen */
+
+.at-panel {clear: both;}
+#block-islandora-solr-simple { float: left;}
+section#block-islandora-solr-simple {margin-bottom: -10px;}
+
 /* Menu Bar Styles */
 #menu-bar { background-color: #bf311a; }
 .nav .block-menu ul li a.active { background-color: white; }
