--- a/CollectionsDemoSiteCss/Collections_test_islandoratheme_customcsssetting.css
+++ b/CollectionsDemoSiteCss/Collections_test_islandoratheme_customcsssetting.css
@@ -29,8 +29,8 @@ div#edit-simple label{color:#005c7d;} /*'for' color*/
 /* Trying to get search in not to overlap menu on a narrow screen */
 
 .at-panel { clear: both; }
-.region-three-33-top .region-inner {background: #d5e8f3;}
-#block-islandora-solr-simple { float: left;}
+.region-inner {background: #d5e8f3;}
+#block-islandora-solr-simple { float: right;}
 section#block-islandora-solr-simple {margin-bottom: -10px;}
 
 /* ------------Menu Bar Styles------------ */
