--- a/PSCislandoraCss/psc_test_islandoratheme_cssLydiaJuly24_2019.css
+++ b/PSCislandoraCss/psc_test_islandoratheme_cssLydiaJuly24_2019.css
@@ -110,6 +110,22 @@ section#block-block-2 {
 clear: none;
 }
 
+div#block-block-1 {
+width: auto;
+}
+
+#block-block-2 {width: 100vw; min-width: 100px; float: right;}
+
+#featuredcollectionhomepagebox {
+    padding: 1%;
+    margin: 1%;
+    max-width: 470px;
+    min-width: 100px;
+    border-radius: 5px;
+clear: none;
+float: right;
+}
+
 /*------------Main Content------------*/
 .block-title { font-size: 1.3em; margin-bottom: 10px; border-bottom: 4px solid #000000;}
 #main-content h1#page-title { font-size: 1.4em; border-bottom: 4px solid #000000; padding-bottom: 7px; }
