Better display of 'Search in' bar on mobile.

--- a/PSCislandoraCss/psc_test_islandoratheme_cssLydiaJuly24_2019.css
+++ b/PSCislandoraCss/psc_test_islandoratheme_cssLydiaJuly24_2019.css
@@ -28,6 +28,12 @@ div#edit-simple label{color:#1F1B26;} /*'Search Term' color*/
 /* Basic Search Styles */
 #islandora-basic-view-all-option { border-bottom: 4px solid #ffffff; }/*???*/
 
+/* Trying to get search in not to overlap menu on a narrow screen */		
+.at-panel {clear: both;}		
+.region-three-33-top .region-inner {background: #d3d3d3;}		
+#block-islandora-solr-simple { float: left;}		
+section#block-islandora-solr-simple {margin-bottom: -10px;}
+
 /* ------------Menu Bar Styles------------ */
 #menu-bar {background: #296BB5;
 }
