--- a/PSCislandoraCss/psc_test_islandoratheme_cssLydiaJuly24_2019.css
+++ b/PSCislandoraCss/psc_test_islandoratheme_cssLydiaJuly24_2019.css
@@ -92,7 +92,8 @@ border-left: 1px solid #005c7d;
 
 /*------------Highlighted Region------------*/
 div.region-highlighted {
-background: #f5f5f5}
+background: #f5f5f5;
+margin: 0px;}
 div.region-highlighted {color: black;} /*highlighted text colors*/
 div.region-highlighted .block-title {color: #036A38; border-bottom: 4px solid black;}/*border bottom*/
 
